Fixed console overflow

--- a/css/source/_base.code.css
+++ b/css/source/_base.code.css
@@ -13,9 +13,7 @@ pre {
 }
 
 code {
-  display: block;
   max-width: 100%;
-  overflow: auto;
 
   /* We want the code to wrap */
   white-space: pre-wrap;
